tests/machine/x/pascal/nested_function.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T15:43:25Z
program NestedFunction;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function outer(x: integer): integer;
begin
  result := inner(5);
  exit;
end;

begin
  writeln(outer(3));
end.
